--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "todo-hooks",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -10,13 +13,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/camdyn-dev/react-todos",
+  "homepage": "https://camdyn-dev.github.io/react-todos/",
   "scripts": {
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
